<resources>
    <string name="app_name">Menubox</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">signInActivity</string>
    <string name="title_activity_login">Sign in</string>
    
    <!-- Strings related to Search -->
    <string name="search_hint">Search for a Restaurant</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign">Sign in</string>
    <string name="title_activity_favourite">favourite</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="title_activity_image_adapter">ImageAdapter</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="add_from_gallery">Add From Gallery</string>
    <string name="add_from_camera">Add From Camera</string>
    <string name="action_search">Search</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_compare">Compare</string>
    <string name="action_account">Account</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_headline">About Us</string>
</resources>
